WIP: cannot finish matrix product

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,10 @@ project(matrix)
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(matrix main.cpp)
+add_executable(
+        matrix
+        main.cpp
+)
+
+enable_testing()
+add_subdirectory(UnitTests)
